--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
- <header class="title">
+<head>
+ <link href="style.css" rel="stylesheet" type="text/css">
+</head>
+<header class="title">
   <div class="title-header">
     <div class="title-logo">
        <svg class="title-icon" viewBox="0 0 972 264" xmlns="http://www.w3.org/2000/svg">
