--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link href="/css/style.css" rel="stylesheet" type="text/css">
+ <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <header class="title">
   <div class="title-header">
