Изменение адресов картинок на относительный

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <div class="title-header">
     <div class="title-logo">
        <svg class="title-icon" viewBox="0 0 972 264" xmlns="http://www.w3.org/2000/svg">
-        <g  fill-rule="evenodd">
+        <g  fill-rule="evenodd">		
           <g fill-rule="nonzero" stroke-linecap="round" stroke-linejoin="round">
           <path d="M115.5 36.848v190.304L253.03 132 115.5 36.848zM282.112 142.28l-172 119c-8.29 5.736-19.612-.198-19.612-10.28V13c0-10.082 11.321-16.016 19.612-10.28l172 119c7.184 4.97 7.184 15.59 0 20.56z"/>
           <path d="M42.5 107h107a8 8 0 1 0 0-16h-107a8 8 0 1 0 0 16zm0 70h107a8 8 0 1 0 0-16h-107a8 8 0 1 0 0 16zM8 143h168a8 8 0 1 0 0-16H8a8 8 0 1 0 0 16z"/>
@@ -55,10 +55,10 @@
  <section class="footballer">
   <h2 class="tema">athlets</h2>
   <picture class="footballer-foto">
-        <source srcset="https://raw.githubusercontent.com/netology-code/mq-diploma/master/sources/img/footballer_192.png" media="(max-width: 640px)">
-        <source srcset="https://raw.githubusercontent.com/netology-code/mq-diploma/master/sources/img/footballer_497.png" media="(max-width: 1920px)">
-        <source srcset="https://raw.githubusercontent.com/netology-code/mq-diploma/master/sources/img/footballer_566.png" media="(min-width: 1921px)">
-        <img class="footballer-foto-img" src="https://raw.githubusercontent.com/netology-code/mq-diploma/master/sources/img/footballer_566.png">
+        <source srcset="sources/img/footballer_192.png" media="(max-width: 640px)">
+        <source srcset="sources/img/footballer_497.png" media="(max-width: 1920px)">
+        <source srcset="sources/img/footballer_566.png" media="(min-width: 1921px)">
+        <img class="footballer-foto-img" src="sources/img/footballer_566.png">
       </picture>
   <div class="connection">
      <div class="connection-content">
@@ -84,10 +84,10 @@
     <div class="athlets-top">
       <h2 class="tema tema-basket">players</h2>
       <picture class="basketballer-foto">
-        <source srcset="https://raw.githubusercontent.com/netology-code/mq-diploma/master/sources/img/basketballer_302.png" media="(max-width: 640px)">
-        <source srcset="https://raw.githubusercontent.com/netology-code/mq-diploma/master/sources/img/basketballer_436.png" media="(min-width: 641px) and (max-width: 960px)">
-        <source srcset="https://raw.githubusercontent.com/netology-code/mq-diploma/master/sources/img/basketballer_991.png" media="(min-width: 961px)">
-        <img class="footballer-foto-img" src="https://raw.githubusercontent.com/netology-code/mq-diploma/master/sources/img/basketballer_991.png">
+        <source srcset="sources/img/basketballer_302.png" media="(max-width: 640px)">
+        <source srcset="sources/img/basketballer_436.png" media="(min-width: 641px) and (max-width: 960px)">
+        <source srcset="sources/img/basketballer_991.png" media="(min-width: 961px)">
+        <img class="footballer-foto-img" src="sources/img/basketballer_991.png">
       </picture>
    </div>
     <div class="connection connection-basket">
